--- a/media.css
+++ b/media.css
@@ -39,13 +39,13 @@
 
 @media (max-width: 1307px) {
   .main-1 {
-    margin-left: 20px; /* or any small value */
+    margin-left: 20px; 
   }
   
 }
 @media (max-width: 1220px) {
   .main{
-    gap:20px; /* or any small value */
+    gap:20px; 
   }
   .main img{
     max-height: 360px;
@@ -84,8 +84,27 @@
     font-size: 20px;
   }
   .layer a{
- display: none;
   }
+}
+@media (max-width: 651px){
+  
+  .layer h3{
+    font-size: 15px;
+  }
+  .layer P{
+  font-weight: 500;
+  font-size: 10px;
+  }
+  .layer a{
+    height: 20px;
+    width: 50px;
+    background-color: rgba(0, 0, 0, 0.268);
+    border:solid red;
+    i{
+      display: none;
+    }
+  }
+
 }
 
 
