--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ body{
   display: flex;
   justify-content: center;
   gap: 20px;
-  flex-wrap: wrap; /* allows wrap on small screens */
+  flex-wrap: wrap;  
   margin-top: 20px;
 }
 
@@ -127,7 +127,7 @@ body{
   font-size: 1rem;
   display: inline-block;
   flex: 1 1 auto;
-  max-width: 200px; /* Keep them same size */
+  max-width: 200px;   
 }
 .featured-text-btn a{
   margin: 0px;
@@ -155,8 +155,7 @@ body{
 .main-about {
     display: flex;
     align-items: center;
-    /* justify-content: center; */
-    height: 100vh;          /* full screen height */
+    height: 100vh;       
     padding: 2rem;
     flex-wrap: wrap;  
     background-color: #151515af;    
@@ -394,7 +393,7 @@ body{
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 40px;
   margin-top: 50px;
-  justify-content: center; /* Center the whole grid content */
+  justify-content: center;
 }
 
 .work {
@@ -452,11 +451,15 @@ body{
   border-radius: 50%;
   text-align: center;
 }
-.work:hover img{
-  transform: scale((1.1));
+.work:hover img {
+  transform: scale(1.1);
+  opacity: 0.1;
+  transition: transform 0.3s ease, opacity 0.3s ease; 
 }
+
 .work:hover .layer{
   height: 100%;
+  
 }
 .btn{
   display: block;
